[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/LifeIcon.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/HUD.gd" type="Script" id=2]
[ext_resource path="res://PowerUps/LaserPowerUpIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://PowerUps/SpeedPowerUpIcon.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="HUD" type="Control"]
margin_right = 62.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="LifeContainer" type="HBoxContainer" parent="."]
margin_left = 30.0
margin_top = 550.0
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="LifeIcon" parent="LifeContainer" instance=ExtResource( 1 )]
margin_right = 99.0
margin_bottom = 75.0

[node name="LifeIcon2" parent="LifeContainer" instance=ExtResource( 1 )]
margin_left = 103.0
margin_right = 202.0
margin_bottom = 75.0

[node name="LifeIcon3" parent="LifeContainer" instance=ExtResource( 1 )]
margin_left = 206.0
margin_right = 305.0
margin_bottom = 75.0

[node name="LifeIcon4" parent="LifeContainer" instance=ExtResource( 1 )]
margin_left = 309.0
margin_right = 408.0
margin_bottom = 75.0

[node name="Score" type="Label" parent="."]
margin_left = 32.0
margin_top = 507.0
margin_right = 85.0
margin_bottom = 521.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0.94902, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

[node name="SpeedPowerUp" type="HBoxContainer" parent="."]
visible = false
margin_left = 900.0
margin_top = 500.0
margin_right = 940.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )

[node name="SpeedPowerUpIcon" parent="SpeedPowerUp" instance=ExtResource( 4 )]
margin_right = 22.0
margin_bottom = 40.0

[node name="LaserPowerUp" type="HBoxContainer" parent="."]
visible = false
anchor_right = 900.0
margin_left = 950.0
margin_top = 500.0
margin_right = -54810.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )

[node name="LaserPowerUpIcon" parent="LaserPowerUp" instance=ExtResource( 3 )]
margin_right = 22.0
margin_bottom = 40.0

[node name="DeathTransitionTimer" type="Timer" parent="."]

[connection signal="timeout" from="DeathTransitionTimer" to="." method="_on_DeathTransitionTimer_timeout"]
